# firefox-bookmarks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  formatting.yml  integration_tests.yml  unit_tests.yml
examples/: README.md
examples/create_pypi_folder/: the_easy_way.py
examples/fetch_github_bookmarks/: execute_sql.py  models.py  the_easy_way.py  use_models.py
examples/move_to_me-dium/: the_easy_way.py
examples/rename_to_wikikipedia/: execute_sql.py  models.py  revert.py  the_easy_way.py
firefox_bookmarks/: __init__.py  bookmark.py  connect.py  constants.py  locate.py  models.py
tests/: test_connect.py  test_locate.py  test_models.py
tests/integration_tests/: test_fetch_bookmarks.py  test_select_bookmarks.py  test_update_bookmarks.py
tests/integration_tests/data/: select_bookmarks.txt  test_fetch_bookmarks.txt  update_bookmarks.txt
tests/unit_tests/: test_models.py
